Make sure imgRequestProxys are added to the loadgroup even if we have a cached imgRequest for them.  This allows the Stop button to cancel the proxy as needed.  Bug 268985, r=pavlov, sr=darin